--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,9 @@ en:
         device_attribute_id: 'Attribute name'
       schedule:
         title: 'Title'
+        is_recurrent: 'Repeat..'
+        recurrence_frequency: 'Frequency'
+        recurrence_unit: 'Repeat every'
       device_attribute:
         name: 'Attribute'
         primitive_type_c_id: 'Primitive'
