--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,7 @@ en:
         title: 'Title'
         is_recurrent: 'Repeat..'
         recurrence_frequency: 'Frequency'
-        recurrence_unit: 'Repeat every'
+        recurrence_unit: 'Repeat'
       device_attribute:
         name: 'Attribute'
         primitive_type_c_id: 'Primitive'
