--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,10 @@ en:
         title: 'Title'
         is_recurrent: 'Repeat..'
         recurrence_frequency: 'Frequency'
-        recurrence_unit: 'Repeat'
+        recurrence_unit: 'Repeat Unit'
+      device:
+        type_c_id: 'Type'
+        number_of_schedules: 'No. of shcedules'
       device_attribute:
         name: 'Attribute'
         primitive_type_c_id: 'Primitive'
