--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,7 @@ en:
         recurrence_frequency: 'Frequency'
         recurrence_unit: 'Repeat Unit'
       device:
+        name: 'Device Name'
         type_c_id: 'Type'
         number_of_schedules: 'No. of shcedules'
       device_attribute:
